finishing dcli setup - some service bugs remain

--- a/modules/bluetooth/module.yaml
+++ b/modules/bluetooth/module.yaml
@@ -1,5 +1,6 @@
+# TODO: fix bluetooth service
 description: bluetooth
 dotfiles_sync: true
 services:
-  - bluetooth.service
-  - bt-auto-connects.service
+  - bluetooth
+  - bt-auto-connect.service
