service setup working - system services are handled by dcli, user services by niri

--- a/hosts/arch.yaml
+++ b/hosts/arch.yaml
@@ -44,6 +44,12 @@ packages: []
 # Exclude packages from base or modules
 exclude: []
 
+services:
+  enabled:
+    - bluetooth
+    - NetworkManager
+    - docker
+
 # Configuration backup settings
 config_backups:
   enabled: false
