--- a/modules/alacritty/dotfiles/alacritty/themes/github_dark.toml
+++ b/modules/alacritty/dotfiles/alacritty/themes/github_dark.toml
@@ -1,33 +1,33 @@
-# github Alacritty Colors
+# github dark high contrast
 
 # Default colors
 [colors.primary]
-background = '#0d1117'
-foreground = '#e6edf3'
+background = '#0a0c10'
+foreground = '#f0f3f6'
 
 [colors.cursor]
-text = '#0d1117'
-cursor = '#e6edf3'
+text = '#0a0c10'
+cursor = '#f0f3f6'
  
 
 # Normal colors
 [colors.normal]
-black   = '#484f58'
-red     = '#ff7b72'
-green   = '#3fb950'
-yellow  = '#d29922'
-blue    = '#58a6ff'
-magenta = '#bc8cff'
+black   = '#7a828e'
+red     = '#ff9492'
+green   = '#26cd4d'
+yellow  = '#f0b72f'
+blue    = '#71b7ff'
+magenta = '#cb9eff'
 cyan    = '#39c5cf'
-white   = '#b1bac4'
+white   = '#d9dee3'
 
 # Bright colors
 [colors.bright]
-black   = '#6e7681'
-red     = '#ffa198'
-green   = '#56d364'
-yellow  = '#e3b341'
-blue    = '#79c0ff'
-magenta = '#bc8cff'
+black   = '#9ea7b3'
+red     = '#ffb1af'
+green   = '#4ae168'
+yellow  = '#f7c843'
+blue    = '#91cbff'
+magenta = '#cb9eff'
 cyan    = '#39c5cf'
-white   = '#b1bac4'
+white   = '#d9dee3'
