--- a/modules/misc/code_settings.json
+++ b/modules/misc/code_settings.json
@@ -26,7 +26,7 @@
     "window.menuStyle": "custom",
     "window.customTitleBarVisibility": "never",
     // workbench settings
-    "workbench.colorTheme": "GitHub Dark Default",
+    "workbench.colorTheme": "GitHub Dark High Contrast",
     "workbench.activityBar.location": "hidden",
     "workbench.statusBar.visible": true,
     "workbench.startupEditor": "none",
