global theme based on background setup

--- a/modules/alacritty/dotfiles/alacritty/alacritty.toml
+++ b/modules/alacritty/dotfiles/alacritty/alacritty.toml
@@ -1,15 +1,15 @@
 [general]
 import = [
-    "~/.config/alacritty/themes/github_dark.toml"
+    "~/.config/alacritty/themes/theme.toml"
 ]
 
 [font]
 normal = { family = "JetBrainsMono Nerd Font Mono" }
 
-[keyboard]
-bindings = [
-    { key = "Enter", mods = "Super", action = "ToggleFullscreen" }
-    ]
+# [keyboard]
+# bindings = [
+#     { key = "Enter", mods = "Super", action = "ToggleFullscreen" }
+#     ]
 
 [window]
 opacity = 0.80
