--- a/modules/mako/dotfiles/mako/config
+++ b/modules/mako/dotfiles/mako/config
@@ -1,28 +1,15 @@
 sort=-time
 layer=overlay
-
-background-color=#0a0c1080
-text-color=#f0f3f6ff
-border-color=#71b7ffff
-border-size=2
+default-timeout=10000
 border-radius=12
-width=300
-height=110
-icons=0
-max-icon-size=64
-default-timeout=5000
-ignore-timeout=1
-font=monospace 14
-progress-color=#2188ffff
-
-[urgency=low]
-border-color=#39c5cfff
-
-[urgency=normal]
-border-color=#91cbffff
+background-color=#1e252a80
+text-color=#c6c8c9ff
+border-color=#ACAFDFff
+font=JetBrainsMono Nerd Font Mono 14
+# Color of progression bar
+progress-color=over #ACAFDF80
 
 [urgency=high]
-border-color=#ffb1afff
 default-timeout=0
 
 [app-name=wp-vol]
