--- a/modules/alacritty/dotfiles/alacritty/themes/theme.toml
+++ b/modules/alacritty/dotfiles/alacritty/themes/theme.toml
@@ -1,30 +1,30 @@
 # Default colors
 [colors.primary]
-background = "#1e252a"
-foreground = "#c6c8c9"
+background = "#221d44"
+foreground = "#c7c6d0"
 
 [colors.cursor]
-text = "#c6c8c9"
-cursor = "#c6c8c9"
+text = "#c7c6d0"
+cursor = "#c7c6d0"
  
 
 [colors]
 # Normal colors
-normal.black = "#1e252a"
-normal.red = "#A89EB6"
-normal.green = "#F8959C"
-normal.yellow = "#FE94A0"
-normal.blue = "#FEAEA2"
-normal.magenta = "#FCDBAC"
-normal.cyan = "#ACAFDF"
-normal.white = "#c6c8c9"
+normal.black = "#221d44"
+normal.red = "#D56DE5"
+normal.green = "#7B83EA"
+normal.yellow = "#9B95EE"
+normal.blue = "#E793EE"
+normal.magenta = "#C8AEF3"
+normal.cyan = "#F2B6F2"
+normal.white = "#c7c6d0"
 
 # Bright colors
-bright.black = "#64727b"
-bright.red = "#A89EB6"
-bright.green = "#F8959C"
-bright.yellow = "#FE94A0"
-bright.blue = "#FEAEA2"
-bright.magenta = "#FCDBAC"
-bright.cyan = "#ACAFDF"
-bright.white = "#c6c8c9"
+bright.black = "#6f6c84"
+bright.red = "#D56DE5"
+bright.green = "#7B83EA"
+bright.yellow = "#9B95EE"
+bright.blue = "#E793EE"
+bright.magenta = "#C8AEF3"
+bright.cyan = "#F2B6F2"
+bright.white = "#c7c6d0"
